--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
   <!-- Background song (PUT YOUR FILE NEXT TO THIS HTML) -->
   <!-- Rename your song to song.mp3 OR change src below -->
   <audio id="bgm" preload="auto" loop>
-    <source src="song.mp3" type="audio/mpeg" />
+    <source src="Song.mpeg" type="audio/mpeg" />
     Your browser does not support audio.
   </audio>
 
